@@ -171,7 +171,7 @@ This manual page was originally written by
 .SH REPORTING BUGS
 To submit a bug report, create a ticket in smartmontools wiki:
 .br
-<\fBhttp://www.smartmontools.org/\fP>.
+<\fBhttps://www.smartmontools.org/\fP>.
 .br
 Alternatively send the info to the smartmontools support mailing list:
 .br
